--- a/styles.css
+++ b/styles.css
@@ -388,13 +388,29 @@ body {
     max-width: 100%;
     height: auto; /* Bevara bildens proportioner */
     display: block; /* Ta bort extra mellanrum under bilden */
-    margin: 0 auto; /* Centrera bilden om du vill */
+    margin: 0 auto; /* Centrera bilden */
 }
+
 
 #qr-code-result {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100vh; /* Detta gör att det tar upp hela höjden av sidan, kan justeras */
+    height: 100vh; /* Höjd för att ta upp hela skärmen */
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.ticket-form, .instructions {
+    transition: opacity 0.3s ease;
+}
+
+.ticket-form, .instructions {
+    opacity: 1;
+}
+
+/* Dölja instruktioner och formulär när QR-koden visas */
+.ticket-form[style="display: none"], .instructions[style="display: none"] {
+    opacity: 0;
 }
