--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    color: #ffffff;
+    color: black;
     display: block;
     flex-direction: column;
     min-height: 100vh;
