--- a/styles.css
+++ b/styles.css
@@ -147,6 +147,7 @@ p {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: medium;
     font-weight: 400;
+    color: #ffffff ;
 }
 
 /* Scanner Page */
