--- a/styles.css
+++ b/styles.css
@@ -339,7 +339,7 @@ button[style="display: none;"] {
 .try-again-button {
     padding: 0.75rem 1.5rem;
     font-size: 1rem;
-    color: #ffffff;
+    color: black;
     background-color: hsl(329.1, 84%, 69.02%);
     border: none;
     border-radius: 5px;
