--- a/styles.css
+++ b/styles.css
@@ -340,6 +340,7 @@ button[style="display: none;"] {
     padding: 0.75rem 1.5rem;
     font-size: 1rem;
     color: black;
+    font-weight: 600;
     background-color: hsl(329.1, 84%, 69.02%);
     border: none;
     border-radius: 5px;
